<resources>
    <string name="app_name">Fake Call</string>
    <string name="numberPhone">Number phone</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="avatar">Avatar</string>
    <string name="ringtone">Ringtone</string>
    <string name="Voice">Voice</string>
    <string name="start">Start</string>
    <string name="iconSilent" translatable="false">IconSilent</string>
    <string name="textBtnSilent">Silent</string>
    <string name="iconMessage" translatable="false">IconMessage</string>
    <string name="textBtnMessage">Message</string>
    <string name="iconDenyCall" translatable="false">IconDenyCall</string>
    <string name="iconAcceptCall" translatable="false">IconAcceptCall</string>
    <string name="background">Background</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_default">DEFAULT</string>
    <string name="text_import">Import</string>
    <string name="back_message">Press back again to leave the app</string>
    <string name="change_background">Change background</string>
    <string name="change_background_message">Change the background image behind the call</string>

    <string name="change_voice">Change voice</string>
    <string name="change_voice_message">Change caller voice when accepting calls</string>

    <string name="change_ringtone">Change ringtone</string>
    <string name="change_ringtone_message">Change ringtone when someone calls</string>

    <string name="appFolder" translatable="false">/Mvt1927Project/FakeCall/</string>
    <string name="backgroundImagePath" translatable="false">Image/Background.jpg</string>
    <string name="avatarImagePath" translatable="false">Image/Avatar.jpg</string>
    <string name="up_image_success">Image upload success</string>
    <string name="up_image_false">Image upload failed</string>
    <string name="cancel_crop">Crop image has been canceled</string>
    <string name="cancel_pick">Pick activity has been canceled</string>
    <string name="s_change_to_default">Changed to default</string>
    <string name="un_load_image">Unable to receive images using default image instead</string>
    <string name="s_change_avatar_title">Change avatar</string>
    <string name="s_change_avatar_mess">Change caller avatar</string>
    <string name="count_time_on_call" translatable="false">count time on call</string>
    <string name="time_test" translatable="false">00:00</string>
    <string name="icon_speaker" translatable="false">Icon speaker</string>
    <string name="time">Time</string>
    <string name="_10_minute">10 minute</string>
    <string name="_5_minute">5 minute</string>
    <string name="_now">Now</string>
    <string name="time_0">Fake call will start in a few seconds</string>
    <string name="time_5">"Fake call will start in "</string>
    <string name="time_10">Fake call will start in </string>
    <string name="time_minute">minutes</string>
    <string name="time_hour">hour</string>
    <string name="time_second">second</string>
    <string name="video">Video</string>
    <string name="hold_on">Hold on</string>
    <string name="record">Record</string>
    <string name="plus">Plus</string>
    <string name="per">You have denied access to the storage, you may have to manually go into the settings to re-grant this app permission to use some functions.</string>
    <string name="per0">You have denied access to memory, you may have to go into settings provide memory access to use this function</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="select_time">Select time</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="text_stop">stop</string>

</resources>