<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2022 Mvt1927
  ~ Create 9/6/2022
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/Avatar"
        android:layout_width="@dimen/DefaultDimenAvatar"
        android:layout_height="@dimen/DefaultDimenAvatar"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_avatar"
        app:civ_border="false"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <TextView
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Avatar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText">

        <ImageView
            android:layout_width="14sp"
            android:layout_height="14sp"
            android:layout_marginTop="2px"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_on_call_sim_1"
            app:tint="@color/SecondaryLight"
            tools:ignore="PxUsage" />

        <TextView
            android:id="@+id/phoneEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/numberPhone"
            android:textColor="@color/SecondaryLight"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/locationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/location"
            android:textColor="@color/SecondaryLight"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>