<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/avatar" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="340dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textStyle="bold"
        android:inputType="textCapWords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="name"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="50dp"
        android:layout_marginBottom="240dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/numberPhone"
            android:textAlignment="center"
            android:textStyle="normal"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/location"
            android:inputType="textCapWords"
            android:textAlignment="center"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="postalAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>
    <Button
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/selectTime"
        android:padding="10dp"
        android:textColorHint="#ffffff"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/NewVoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/NameRecord"
        android:padding="10dp"
        android:textColorHint="#ffffff"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/btn_start_fake_call"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:background="@drawable/call_green"
        android:layout_marginBottom="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/start" />
  </androidx.constraintlayout.widget.ConstraintLayout>