<?xml version="1.0" encoding="utf-8"?><!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2022 Mvt1927
  ~ Create 9/6/2022
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Filter"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/layout_information"

        layout="@layout/layout_information"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/layout_count_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_information"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="14sp"
            android:layout_height="14sp"
            android:layout_marginTop="2px"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/count_time_on_call"
            android:src="@drawable/ic_on_call_count_time"
            app:tint="@color/Light"
            tools:ignore="PxUsage" />

        <TextView
            android:id="@+id/text_view_count_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_test"
            android:textColor="@color/Light"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/layout_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_count_time">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="1"
            tools:ignore="UselessParent">

            <FrameLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center">

                <include layout="@layout/btn_speaker" />
            </FrameLayout>

            <FrameLayout
                android:layout_rowWeight="0"
                android:layout_columnWeight="0"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@+id/btn_deny_call"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_deny_call"
                    android:contentDescription="@string/iconDenyCall" />
            </FrameLayout>

            <FrameLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center">

                <include layout="@layout/btn_numpad" />
            </FrameLayout>
        </GridLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>